--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             <div class="logocont"><img width="70px" class="logoimg" src="./assets/kkl.png" alt="logo"></div>
     </div>
     <img id="menu" class="menuimages" src="./assets/1.png" loading="lazy" alt="">
-    <img class="menuimages" src="./assets/3.png" loading="lazy" alt="">
-    <img class="menuimages" src="./assets/2.png" loading="lazy" alt="">
-    <img class="menuimages" src="./assets/4.png" loading="lazy" alt="">
-    <img class="menuimages" src="./assets/5.png" loading="lazy" alt="">
-    <img class="menuimages" src="./assets/6.png" loading="lazy" alt="">
-    <img class="menuimages" src="./assets/7.png" loading="lazy" alt="">
-    <img class="menuimages" src="./assets/8.png" loading="lazy" alt="">
+    <img class="menuimages" src="./assets/3.png" loading="eager" alt="">
+    <img class="menuimages" src="./assets/2.png" loading="eager" alt="">
+    <img class="menuimages" src="./assets/4.png" loading="eager" alt="">
+    <img class="menuimages" src="./assets/5.png" loading="eager" alt="">
+    <img class="menuimages" src="./assets/6.png" loading="eager" alt="">
+    <img class="menuimages" src="./assets/7.png" loading="eager" alt="">
+    <img class="menuimages" src="./assets/8.png" loading="eager" alt="">
     <script src="./main.js"></script>
 </body>
 </html>
