--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <div class="logocont"><img width="70px" class="logoimg" src="./assets/kkl.png" alt="logo"></div>
     </div>
-    <img id="menu" class="menuimages" src="./assets/1.png" loading="lazy" alt="">
+    <img id="menu" class="menuimages" src="./assets/1.png" loading="eager" alt="">
     <img class="menuimages" src="./assets/3.png" loading="eager" alt="">
     <img class="menuimages" src="./assets/2.png" loading="eager" alt="">
     <img class="menuimages" src="./assets/4.png" loading="eager" alt="">
