--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Favorite Restaurant">
-    <meta property="og:site_name" content="Favorite Restaurant Menu">
-    <meta property="og:url" content="favoriterestaurant.com">
+    <meta property="og:title" content="Favourite Restaurant">
+    <meta property="og:site_name" content="Favourite Restaurant Menu">
+    <meta property="og:url" content="favouriterestaurant.com">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://i.ibb.co/LPzLpHB/Frlg.png">
